--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">PSIMonitor</string>
+    <string name="title_home_toolbar">Singapore PSI Index</string>
+    <string name="title_home">Home</string>
+    <string name="title_24_hr_psi">24-hr PSI</string>
+    <string name="title_pol_subindex">Poll. Sub-Index</string>
+    <string name="google_api_key">AIzaSyC3AO66tsIuQFKgUI1duRPa_uv5DvzYkqc</string>
+    <string name="text_ok">OK</string>
+
+    <string name="error">Oops&#8230;</string>
+    <string name="error_emulator">Your device detect as emulator/rooted phone</string>
+    <string name="error_no_data_received">No data received. Please try again later</string>
+    <string name="error_something">Dang! This should not be happening. Please contact us at support@movieapp.com</string>
+    <string name="error_failed_data">Failed retrieving data. Please try again later</string>
+    <string name="error_no_connection">No connection found. Please check your wifi or cellular data settings</string>
+    <string name="error_no_data_found">No data found</string>
+    <string name="error_cannot_load">Can\'t Load Content. \nCheck your internet connection</string>
+    <string name="error_permission">Some Permission is Denied</string>
+    <string name="error_something_wrong">Something wrong</string>
+
+    <string name="permission_grant">You need to grant access to </string>
+    <string name="permission_location">Location</string>
+    <string name="permission_storage">Storage</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="permission_must">PSI Monitor must have location to run</string>
 </resources>
